[gd_scene load_steps=3 format=3 uid="uid://b4ua6mws6ql4k"]

[ext_resource type="Texture2D" uid="uid://bcrlirauis0tp" path="res://assets/player_tank.png" id="1_kg2mx"]
[ext_resource type="Script" uid="uid://cn8mwyj0jxncq" path="res://player_tank.gd" id="1_ttduk"]

[node name="PlayerTank" type="Area2D"]
script = ExtResource("1_ttduk")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(6, 0)
polygon = PackedVector2Array(-2, 8, -4, 8, -4, 7, -5, 7, -5, 4, -3, 4, -3, 3, -2, 3, -2, 2, -1, 2, -1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 2, 1, 2, 2, 3, 2, 3, 3, 4, 3, 4, 4, 6, 4, 6, 7, 5, 7, 5, 8, 3, 8, 3, 7, 2, 7, 2, 6, -1, 6, -1, 7, -2, 7)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kg2mx")
centered = false

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
